// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can handle complex footnote 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 32,
                  "line": 1,
                  "offset": 31,
                },
                "start": Object {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
              },
              "type": "text.plain",
              "value": "Content of the footnote.",
            },
          ],
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 2,
              "offset": 32,
            },
            "start": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "paragraph",
        },
        Object {
          "attributes": Object {},
          "name": "SRC",
          "params": Array [
            "javascript",
          ],
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 4,
              "offset": 104,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 32,
            },
          },
          "type": "block",
          "value": "
console.log('footnote with code block')",
        },
      ],
      "label": "1",
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 10,
          "line": 4,
          "offset": 104,
        },
        "start": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
      },
      "type": "footnote",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 4,
      "offset": 104,
    },
    "start": Object {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`can handle footnote 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 32,
                  "line": 1,
                  "offset": 31,
                },
                "start": Object {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
              },
              "type": "text.plain",
              "value": "Content of the footnote.",
            },
          ],
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 32,
              "line": 1,
              "offset": 31,
            },
            "start": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "paragraph",
        },
      ],
      "label": "1",
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 32,
          "line": 1,
          "offset": 31,
        },
        "start": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
      },
      "type": "footnote",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 32,
      "line": 1,
      "offset": 31,
    },
    "start": Object {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`can handle multi line footnote 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 32,
                  "line": 1,
                  "offset": 31,
                },
                "start": Object {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
              },
              "type": "text.plain",
              "value": "Content of the footnote.",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 32,
                },
                "start": Object {
                  "column": 32,
                  "line": 1,
                  "offset": 31,
                },
              },
              "type": "text.plain",
              "value": " ",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 13,
                  "line": 2,
                  "offset": 44,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 32,
                },
              },
              "type": "text.plain",
              "value": "And here is ",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 22,
                  "line": 2,
                  "offset": 53,
                },
                "start": Object {
                  "column": 13,
                  "line": 2,
                  "offset": 44,
                },
              },
              "type": "text.bold",
              "value": "another",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 28,
                  "line": 2,
                  "offset": 59,
                },
                "start": Object {
                  "column": 22,
                  "line": 2,
                  "offset": 53,
                },
              },
              "type": "text.plain",
              "value": " line.",
            },
          ],
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 28,
              "line": 2,
              "offset": 59,
            },
            "start": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "paragraph",
        },
      ],
      "label": "1",
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 28,
          "line": 2,
          "offset": 59,
        },
        "start": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
      },
      "type": "footnote",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 28,
      "line": 2,
      "offset": 59,
    },
    "start": Object {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`knows when empty lines can stop footnote 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 32,
                  "line": 1,
                  "offset": 31,
                },
                "start": Object {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
              },
              "type": "text.plain",
              "value": "Content of the footnote.",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 32,
                },
                "start": Object {
                  "column": 32,
                  "line": 1,
                  "offset": 31,
                },
              },
              "type": "text.plain",
              "value": " ",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 26,
                  "line": 2,
                  "offset": 57,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 32,
                },
              },
              "type": "text.plain",
              "value": "And here is another line.",
            },
          ],
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 4,
              "offset": 59,
            },
            "start": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "paragraph",
        },
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 22,
                  "line": 4,
                  "offset": 80,
                },
                "start": Object {
                  "column": 1,
                  "line": 4,
                  "offset": 59,
                },
              },
              "type": "text.plain",
              "value": "still belongs to fn:1",
            },
          ],
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 6,
              "offset": 82,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 59,
            },
          },
          "type": "paragraph",
        },
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 13,
                  "line": 7,
                  "offset": 95,
                },
                "start": Object {
                  "column": 1,
                  "line": 7,
                  "offset": 83,
                },
              },
              "type": "text.plain",
              "value": "This is not.",
            },
          ],
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 13,
              "line": 7,
              "offset": 95,
            },
            "start": Object {
              "column": 1,
              "line": 7,
              "offset": 83,
            },
          },
          "type": "paragraph",
        },
      ],
      "label": "1",
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 13,
          "line": 7,
          "offset": 95,
        },
        "start": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
      },
      "type": "footnote",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 13,
      "line": 7,
      "offset": 95,
    },
    "start": Object {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`knows when footnote can stop footnote 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 32,
                  "line": 1,
                  "offset": 31,
                },
                "start": Object {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
              },
              "type": "text.plain",
              "value": "Content of the footnote.",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 32,
                },
                "start": Object {
                  "column": 32,
                  "line": 1,
                  "offset": 31,
                },
              },
              "type": "text.plain",
              "value": " ",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 26,
                  "line": 2,
                  "offset": 57,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 32,
                },
              },
              "type": "text.plain",
              "value": "And here is another line.",
            },
          ],
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 3,
              "offset": 58,
            },
            "start": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "paragraph",
        },
      ],
      "label": "1",
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 1,
          "line": 3,
          "offset": 58,
        },
        "start": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
      },
      "type": "footnote",
    },
    Object {
      "children": Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 25,
                  "line": 3,
                  "offset": 82,
                },
                "start": Object {
                  "column": 8,
                  "line": 3,
                  "offset": 65,
                },
              },
              "type": "text.plain",
              "value": "another footnote.",
            },
          ],
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 25,
              "line": 3,
              "offset": 82,
            },
            "start": Object {
              "column": 8,
              "line": 3,
              "offset": 65,
            },
          },
          "type": "paragraph",
        },
      ],
      "label": "2",
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 25,
          "line": 3,
          "offset": 82,
        },
        "start": Object {
          "column": 8,
          "line": 3,
          "offset": 65,
        },
      },
      "type": "footnote",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 25,
      "line": 3,
      "offset": 82,
    },
    "start": Object {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`knows when headline can stop footnote 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 32,
                  "line": 1,
                  "offset": 31,
                },
                "start": Object {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
              },
              "type": "text.plain",
              "value": "Content of the footnote.",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 32,
                },
                "start": Object {
                  "column": 32,
                  "line": 1,
                  "offset": 31,
                },
              },
              "type": "text.plain",
              "value": " ",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 26,
                  "line": 2,
                  "offset": 57,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 32,
                },
              },
              "type": "text.plain",
              "value": "And here is another line.",
            },
          ],
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 3,
              "offset": 58,
            },
            "start": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "paragraph",
        },
      ],
      "label": "1",
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 1,
          "line": 3,
          "offset": 58,
        },
        "start": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
      },
      "type": "footnote",
    },
    Object {
      "children": Array [
        Object {
          "actionable": false,
          "children": Array [
            Object {
              "level": 1,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 3,
                  "offset": 59,
                },
                "start": Object {
                  "column": 1,
                  "line": 3,
                  "offset": 58,
                },
              },
              "type": "stars",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 13,
                  "line": 3,
                  "offset": 70,
                },
                "start": Object {
                  "column": 3,
                  "line": 3,
                  "offset": 60,
                },
              },
              "type": "text.plain",
              "value": "A Headline",
            },
          ],
          "content": "A Headline",
          "level": 1,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 13,
              "line": 3,
              "offset": 70,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 58,
            },
          },
          "type": "headline",
        },
      ],
      "level": 1,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 13,
          "line": 3,
          "offset": 70,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 58,
        },
      },
      "properties": Object {},
      "type": "section",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 13,
      "line": 3,
      "offset": 70,
    },
    "start": Object {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;
